--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@
 
 [build-system]
 build-backend = "setuptools.build_meta"
-requires = ["setuptools", "wheel"]
+requires = [
+  "setuptools",
+  "wheel",
+]
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
@@ -115,15 +118,36 @@ lint.select = [
   "W",
   "YTT",
 ]
+lint.ignore = [
+  "ANN001",
+  "ANN101",
+  "ANN201",
+  "ANN204",
+  "ARG002",
+  "COM812",
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D104",
+  "D105",
+  "D107",
+  "D205",
+  "N812",
+]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+
 lint.explicit-preview-rules = true
-lint.fixable = ["ALL"]
-lint.unfixable = []
+lint.fixable = [
+  "ALL",
+]
+lint.unfixable = [
+]
 # Allow unused variables when underscore-prefixed.
 lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 # Like Black, use double quotes for strings.
 lint.pydocstyle.convention = "google"
-lint.ignore = []
-# Allow fix for all enabled rules (when `--fix`) is provided.
 
 [tool.mypy]
 python_version = "3.10"
